2006-10-12  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Replace -rc1 svg driver with the version from cvs
	12 Oct 2006.  This changes the handling of escaped characters and
	characters given as octal constants.  Bug #1575007

2006-10-12  Daniel Sebald  <daniel.sebald@ieee.org>

	* docs/gnuplot.doc: Small corrections.

	* term/post.trm (PS_encode_image): Added gamma correction for images
	using a PostScript transfer function. SF Patch [1575425].

2006-10-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (test_palette_subcommand): Fixed order of set tics
	commands.

2006-10-10  Ethan A Merritt  <merritt@u.washington.edu>

	* m4/alpha.m4:  Have the new macro use __alpha as the basis for the
	test.  Checked on Digital Unix 4.0D and Tru64 V5.1

2006-10-10  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* m4/alpha.m4: New macro GP_ALPHA.  Try to auto-detect if
	compilater targets DEC Alpha/AXP CPU.  If so, add -mieee or -ieee
	flag to CFLAGS to avoid FPU weirdness.

	* configure.in (GP_ALPHA): Call new macro.

2006-10-08  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS README.1ST src/version.c: Updates.

2006-10-08  Daniel Sebald  <daniel.sebald@ieee.org>

	* demo/borders.dem: Place all 16 plots on one multiplot.

	* demo/all.dem: Put borders.dem inside all.dem.

2006-10-08  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* docs/gnuplot.doc: Fix gotcha in list of alignment 
	options in 'at <position>' case.

2006-10-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (change_term): For backward compatibility, allow
	"set term X" as shorthand for "set term x11".

2006-10-04  Ethan A Merritt  <merritt@u.washington.edu>

	* tutorial/eg7.plt: Make sure no local encoding is in effect, since
	the corresponding TeX package is probably not going to be loaded.

	* term/post.trm (PS_vector): Fix breakage introduced by Bugfix #1542050.
	The path length must not be set to 0 without issuing a stroke command,