@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: gplt_x11.c,v 1.167 2006/07/22 00:01:29 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: gplt_x11.c,v 1.167.2.1 2006/10/13 19:47:28 sfeam Exp $"); }
 #endif
 
 #define X11_POLYLINE 1
@@ -4081,6 +4081,7 @@ is_meta(KeySym mod)
 static char*
 getMultiTabConsoleSwitchCommand(unsigned long *newGnuplotXID)
 {
+#ifdef HAVE_STRDUP	/* We assume that any machine missing strdup is too old for KDE */
     char *cmd = NULL; /* result */
     char *ptr = getenv("KONSOLE_DCOP_SESSION"); /* Try KDE's Konsole first. */
     *newGnuplotXID = 0;
@@ -4154,6 +4155,8 @@ getMultiTabConsoleSwitchCommand(unsigned long *newGnuplotXID)
     }
     /* now test for GNOME multitab console */
     /* ... if somebody bothers to implement it ... */
+
+#endif /* HAVE_STRDUP */
     /* we are not running in any known (implemented) multitab console */
     return NULL;
 }
